final changes for marker-options

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -50,7 +50,8 @@
                                 <input type="radio" name="burial methods" value="Casket">
                             </div>
 
-                            <button type="button" class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
+                            <button type="button"
+                                class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
                         </div>
@@ -64,7 +65,8 @@
                         </div>
 
                         <div class="card-image">
-                            <img src="../static/images/bm_Ecoffins.webp" alt="This is an eco-friendly brown woven bamboo casket">
+                            <img src="../static/images/bm_Ecoffins.webp"
+                                alt="This is an eco-friendly brown woven bamboo casket">
                         </div>
 
                         <div class="card-select flex">
@@ -86,7 +88,8 @@
                         </div>
 
                         <div class="card-image">
-                            <img src="../static/images/bm_shroud.jpg" alt="This is a burial method where body is wrapped in clothes">
+                            <img src="../static/images/bm_shroud.jpg"
+                                alt="This is a burial method where body is wrapped in clothes">
                         </div>
 
                         <div class="card-select flex">
@@ -108,7 +111,8 @@
                         </div>
 
                         <div class="card-image">
-                            <img src="../static/images/bm_treepod.jpg" alt="This is a bio-degradable pod with the remains buried to nurture trees">
+                            <img src="../static/images/bm_treepod.jpg"
+                                alt="This is a bio-degradable pod with the remains buried to nurture trees">
                         </div>
 
                         <div class="card-select flex">
@@ -125,6 +129,101 @@
 
                 </div>
 
+            </div>
+
+            <!--
+                This HTML code contains details (text and images)
+                regarding marker options.
+            -->
+            <div class="marker-options">
+
+                <div class="heading text-center">
+                    MARKER OPTIONS
+                </div>
+
+                <div class="layout-marker-options flex flex-wrap justify-evenly gap-5">
+
+                    <div class="card border-[2px] border-black rounded-lg">
+
+                        <div class="card-image">
+                            <img src="../static/images/mo_woodencross.jpg"
+                                alt="This is a wooden cross used for memorial purposes.">
+                        </div>
+
+                        <div class="card-text pt-2 pl-2">
+                            This is a wooden cross used for memorial purposes.
+                        </div>
+
+                        <div class="card-select flex">
+                            <input type="radio" name="marker options" value="Wooden Cross">
+                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black rounded-lg">
+
+                        <div class="card-image">
+                            <img src="../static/images/mo_stonemarker.jpeg"
+                                alt="This is engraved stone marker for natural burial.">
+                        </div>
+
+                        <div class="card-text pt-2 pl-2">
+                            This is engraved stone marker for natural burial.
+                        </div>
+
+                        <div class="card-select flex">
+                            <input type="radio" name="marker options" value="Stone Marker">
+                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black rounded-lg">
+
+                        <div class="card-image">
+                            <img src="../static/images/mo_woodenplaque.jpeg"
+                                alt="This is a standing wooden plaque for natural burial.">
+                        </div>
+
+                        <div class="card-text pt-2 pl-2">
+                            This is a standing wooden plaque for natural burial.
+                        </div>
+
+                        <div class="card-select flex">
+                            <input type="radio" name="marker options" value="Wooden Plaque">
+                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black rounded-lg">
+
+                        <div class="card-image">
+                            <img src="../static/images/mo_treemarker.jpeg"
+                                alt="This is a wooden board pinned at tree for identification.">
+                        </div>
+
+                        <div class="card-text pt-2 pl-2">
+                            This is a wooden board pinned at tree for identification.
+                        </div>
+
+                        <div class="card-select flex">
+                            <input type="radio" name="marker options" value="Tree Marker">
+                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                </div>
             </div>
 
         </form>
