--- a/Natural Burial/static/css/index.css
+++ b/Natural Burial/static/css/index.css
@@ -1,61 +1,113 @@
-html{
+html {
     font-size: 16px;
 }
 
 
 /* CSS by Bhabin Chudal */
 
-.burial-methods .heading{
+.burial-methods .heading {
     font-size: 4rem;
 }
 
-.burial-methods .card{
+.burial-methods .card {
     width: 37rem;
     height: 47rem;
 }
 
 /* Setting the height of each div inside card to achieve proper layout */
-.burial-methods .card{
-    .card-heading{
-        height: fit-content; /* Occupies the exact amount of height required to fit heading */
+.burial-methods .card {
+    .card-heading {
+        height: fit-content;
+        /* Occupies the exact amount of height required to fit heading */
         font-size: 3rem;
     }
 
-    .card-image{
-        height: 60%; /* Occupies 60% of the height of the card */
-        flex-grow: 1; /* Occupy the remaining space if heading is short */
+    .card-image {
+        height: 60%;
+        /* Occupies 60% of the height of the card */
+        flex-grow: 1;
+        /* Occupy the remaining space if heading is short */
     }
 
-    .card-select{
-        height: 20%; /* Occupies 20% of the height of the card */
+    .card-select {
+        height: 20%;
+        /* Occupies 20% of the height of the card */
     }
 
-    .card-description{
+    .card-description {
         font-size: 1.5rem;
     }
 }
 
-.burial-methods .card .card-image img{
+.burial-methods .card .card-image img {
     /* Making the image fit the card-image div */
     width: 100%;
     height: 100%;
 }
 
 /* Increasing the size of the icon and radio buttons in card-select div */
-.burial-methods .card-select{
-    button{
+.burial-methods .card-select {
+    button {
         width: 50%;
     }
 
-    i{
+    i {
         font-size: 100px;
     }
 }
 
-.burial-methods .card-select .input-radio{
+.burial-methods .card-select .input-radio {
     width: 50%;
 
-    input[type="radio"]{
+    input[type="radio"] {
         width: 40%;
+    }
+}
+
+
+/* CSS by Sadikshya Oli */
+
+.marker-options .heading {
+    font-size: 4rem;
+}
+
+.marker-options .card {
+    width: 35rem;
+    height: 45rem;
+}
+
+.marker-options .card {
+    .card-image {
+        height: 70%;
+    }
+
+    .card-text {
+        height: 20%;
+        font-size: 2.5rem;
+    }
+
+    .card-select {
+        height: 10%;
+    }
+}
+
+.marker-options .card .card-image img {
+    width: 100%;
+    height: 100%;
+}
+
+.marker-options .card-select {
+    input[type="radio"] {
+        height: 100%;
+        width: 50%;
+    }
+
+    button {
+        width: 50%;
+        height: 100%;
+
+        i {
+            font-size: 60px;
+        }
     }
 }
