--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -20,8 +20,40 @@
 
 <body>
 
-    <div class="form-box">
+    <div class="form-box rounded mt-3">
+
+        <div class="form-heading text-center">
+            <h2>
+                NATURAL BURIAL FORM
+            </h2>
+            <hr class="border-gray-500 border-4">
+        </div>
+
+        <br>
+
         <form action="getBurialInformation()">
+
+            <!--
+                This HTML content contains all the general information
+                that will be entered by the client.
+            -->
+            <div class="general-info grid grid-cols-1 md:grid-cols-2 gap-5 text-center">
+                <label for="name">Name</label>
+                <input type="text" id="name" autocomplete="off" required>
+
+                <label for="phoneNum">Phone Number</label>
+                <input type="number" inputmode="numeric" id="phoneNum" class="appearance-none" required>
+
+                <label for="email">Email</label>
+                <input type="email" id="email" autocomplete="off" required>
+
+                <label for="dob">Date of Birth</label>
+                <input type="date">
+
+                <label for="places"># of Places</label>
+                <input type="number" inputmode="numeric" id="places" class="appearance-none" required>
+
+            </div>
 
             <!--
                 This HTML code contains details (text and images)
@@ -74,7 +106,8 @@
                                 <input type="radio" name="burial methods" value="Eco-coffins">
                             </div>
 
-                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                            <button type="button"
+                                class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
                         </div>
@@ -97,7 +130,8 @@
                                 <input type="radio" name="burial methods" value="Shroud">
                             </div>
 
-                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                            <button type="button"
+                                class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
                         </div>
@@ -117,10 +151,11 @@
 
                         <div class="card-select flex">
                             <div class="input-radio flex justify-center">
-                                <input type="radio" name="burial methods" value="Treepod">
+                                <input type="radio" name="burial methods" value="Tree pod">
                             </div>
 
-                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                            <button type="button"
+                                class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
                         </div>
@@ -146,7 +181,7 @@
                     <div class="card border-[2px] border-black rounded-lg">
 
                         <div class="card-image">
-                            <img src="../static/images/mo_woodencross.jpg"
+                            <img src="../static/images/mo_woodenmemorialcross.jpg"
                                 alt="This is a wooden cross used for memorial purposes.">
                         </div>
 
@@ -224,6 +259,164 @@
                     </div>
 
                 </div>
+            </div>
+
+            <!--
+                This HTML code contains details (text and images)
+                regarding grave site locations.
+            -->
+            <div class="grave-locations">
+
+                <div class="heading text-center">
+                    GRAVE SITE LOCATIONS
+                </div>
+
+                <div class="layout-grave-locations flex flex-col justify-evenly gap-5">
+
+                    <div class="card border-[2px] border-black flex rounded-lg">
+
+                        <div class="card-image">
+                            <img src="../static/images/location_CampHill.jpg" 
+                            alt="Explore the tranquil beauty of Camp Hill, a historic cemetry in Halifax.">
+                        </div>
+
+                        <div class="card-description flex flex-col">
+
+                            <div class="card-text-heading text-center mb-3">
+                                Camp Hill Cemetery
+                                <hr class="border-black border-[3px]">
+                            </div>
+
+                            <div class="card-text p-1">
+                                Explore the tranquil beauty of Camp Hill, a historic cemetry in Halifax.
+                            </div>
+
+                            <div class="card-select flex justify-evenly">
+                                <input type="radio" name="grave locations" 
+                                value="Camp Hill">
+                                <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                    <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                </button>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black flex rounded-lg">
+
+                        <div class="card-image">
+                            <img src="../static/images/location_FairviewLawn.jpg" 
+                            alt="Discover the historic Fairview Lawn, a resting place for many.">
+                        </div>
+
+                        <div class="card-description flex flex-col">
+
+                            <div class="card-text-heading text-center mb-3">
+                                Farview Lawn Cemetry
+                                <hr class="border-black border-[3px]">
+                            </div>
+
+                            <div class="card-text p-1">
+                                Discover the historic Fairview Lawn, a resting place for many.
+                            </div>
+
+                            <div class="card-select flex justify-evenly">
+                                <input type="radio" name="grave locations" 
+                                value="Farview Lawn">
+                                <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                    <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                </button>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black flex rounded-lg">
+
+                        <div class="card-image">
+                            <img src="../static/images/location_StPeters.jpg" 
+                            alt="A landmark of faith, experience the history of St Peter's Cemetery.">
+                        </div>
+
+                        <div class="card-description flex flex-col">
+
+                            <div class="card-text-heading text-center mb-3">
+                                St. Peter's Cemetry
+                                <hr class="border-black border-[3px]">
+                            </div>
+
+                            <div class="card-text p-1">
+                                A landmark of faith, experience the history of St Peter's Cemetery.
+                            </div>
+
+                            <div class="card-select flex justify-evenly">
+                                <input type="radio" name="grave locations" 
+                                value="St. Peter's">
+                                <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                    <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                </button>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black flex rounded-lg">
+
+                        <div class="card-image">
+                            <img src="../static/images/location_MtHermon.jpg" 
+                            alt="A towering peak in a breathtaking landscape, consider Mt Hermon.">
+                        </div>
+
+                        <div class="card-description flex flex-col">
+
+                            <div class="card-text-heading text-center mb-3">
+                                Mount Hermon Cemetery
+                                <hr class="border-black border-[3px]">
+                            </div>
+
+                            <div class="card-text p-1">
+                                A towering peak in a breathtaking landscape, consider Mt Hermon.
+                            </div>
+
+                            <div class="card-select flex justify-evenly">
+                                <input type="radio" name="grave locations" 
+                                value="Mount Hermon">
+                                <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                    <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                </button>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    
+                </div>
+                
+            </div>
+
+            <br>
+
+            <!--
+                Inscription/Favourite Quote [Aakarshan Khosla]
+                This HTML content contains a field where user can 
+                enter their inscription.
+            -->
+            <div class="inscription grid grid-cols-1 md:grid-cols-2 gap-5 text-center mb-5">
+                <div class="quote flex justify-center items-center">
+                    <label class="mr-2" for="inscription">Favourite Quote: </label>
+                </div>
+                <textarea name="" id="inscription" rows="3"></textarea>
+            </div>
+
+            <!--
+                Submit area
+            -->
+            <div class="form-submit text-center">
+                <input type="submit" class="bg-white border-2 border-[#000000] 
+                rounded p-1 hover:bg-[#f5f5dc] rounded" type="submit"></button>
             </div>
 
         </form>
