final html file for phase 2

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -1,3 +1,13 @@
+<!--The purpose of this HTML file is to make the layout and display
+    all information in a form that needs to be filled by the client
+
+    Authors:
+            Aakarshan Khosla (A00474829) [group leader]
+            Aarav Sen Mehta (A00)
+            Bhabin Chudal (A00)
+            Sadikshya Oli (A00)
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,7 +41,7 @@
 
         <br>
 
-        <form action="getBurialInformation()">
+        <form action="/getBurialInformation()" id="burial-form" method="post">
 
             <!--
                 This HTML content contains all the general information
@@ -414,9 +424,11 @@
             -->
             <div class="form-submit text-center">
                 <input type="submit" class="bg-white border-2 border-[#000000] 
-                rounded p-1 hover:bg-[#f5f5dc] rounded" type="submit"></button>
+                    rounded p-1 hover:bg-[#f5f5dc] rounded" type="submit">
+                </input>
             </div>
 
         </form>
     </div>
 </body>
+</html>
