--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -3,9 +3,9 @@
 
     Authors:
             Aakarshan Khosla (A00474829) [group leader]
-            Aarav Sen Mehta (A00)
-            Bhabin Chudal (A00)
-            Sadikshya Oli (A00)
+            Aarav Sen Mehta (A00467075)
+            Bhabin Chudal (A00464169)
+            Sadikshya Oli (A00457938)
 -->
 
 <!DOCTYPE html>
@@ -49,7 +49,7 @@
             -->
             <div class="general-info grid grid-cols-1 md:grid-cols-2 gap-5 text-center">
                 <label for="name">Name</label>
-                <input type="text" id="name" autocomplete="off" required>
+                <input type="text" id="name" autofocus autocomplete="off" required>
 
                 <label for="phoneNum">Phone Number</label>
                 <input type="number" inputmode="numeric" id="phoneNum" class="appearance-none" required>
@@ -84,7 +84,7 @@
                         </div>
 
                         <div class="card-image">
-                            <img src="../static/images/bm_casket.jpg" alt="This is a brown wooden casket">
+                            <img src="../static/images/bm_casket.jpeg" alt="This is a brown wooden casket">
                         </div>
 
                         <div class="card-select flex">
@@ -94,7 +94,7 @@
 
                             <button type="button"
                                 class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
-                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone bm_casket_audio"></i>
                             </button>
                         </div>
 
@@ -107,7 +107,7 @@
                         </div>
 
                         <div class="card-image">
-                            <img src="../static/images/bm_Ecoffins.webp"
+                            <img src="../static/images/bm_Ecoffins.jpeg"
                                 alt="This is an eco-friendly brown woven bamboo casket">
                         </div>
 
@@ -118,7 +118,7 @@
 
                             <button type="button"
                                 class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
-                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone bm_Ecoffins_audio"></i>
                             </button>
                         </div>
 
@@ -131,7 +131,7 @@
                         </div>
 
                         <div class="card-image">
-                            <img src="../static/images/bm_shroud.jpg"
+                            <img src="../static/images/bm_shroud.jpeg"
                                 alt="This is a burial method where body is wrapped in clothes">
                         </div>
 
@@ -142,7 +142,7 @@
 
                             <button type="button"
                                 class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
-                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone bm_shroud_audio"></i>
                             </button>
                         </div>
 
@@ -155,7 +155,7 @@
                         </div>
 
                         <div class="card-image">
-                            <img src="../static/images/bm_treepod.jpg"
+                            <img src="../static/images/bm_treepod.jpeg"
                                 alt="This is a bio-degradable pod with the remains buried to nurture trees">
                         </div>
 
@@ -166,7 +166,7 @@
 
                             <button type="button"
                                 class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
-                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone bm_treepod_audio"></i>
                             </button>
                         </div>
 
@@ -191,8 +191,8 @@
                     <div class="card border-[2px] border-black flex rounded-lg">
 
                         <div class="card-image">
-                            <img src="../static/images/location_CampHill.jpg" 
-                            alt="Explore the tranquil beauty of Camp Hill, a historic cemetry in Halifax.">
+                            <img src="../static/images/location_CampHill.jpg"
+                            alt="Explore the tranquil beauty of Camp Hill, a historic cemetery in Halifax.">
                         </div>
 
                         <div class="card-description flex flex-col">
@@ -203,14 +203,14 @@
                             </div>
 
                             <div class="card-text p-1">
-                                Explore the tranquil beauty of Camp Hill, a historic cemetry in Halifax.
+                                Explore the tranquil beauty of Camp Hill, a historic cemetery in Halifax.
                             </div>
 
                             <div class="card-select flex justify-evenly">
                                 <input type="radio" name="grave locations" 
                                 value="Camp Hill">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                    <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                    <i class="fa-solid fa-microphone text-3xl microphone location_CampHill_audio"></i>
                                 </button>
                             </div>
 
@@ -221,14 +221,14 @@
                     <div class="card border-[2px] border-black flex rounded-lg">
 
                         <div class="card-image">
-                            <img src="../static/images/location_FairviewLawn.jpg" 
+                            <img src="../static/images/location_FairviewLawn.jpg"
                             alt="Discover the historic Fairview Lawn, a resting place for many.">
                         </div>
 
                         <div class="card-description flex flex-col">
 
                             <div class="card-text-heading text-center mb-3">
-                                Farview Lawn Cemetry
+                                Farview Lawn Cemetery
                                 <hr class="border-black border-[3px]">
                             </div>
 
@@ -237,10 +237,10 @@
                             </div>
 
                             <div class="card-select flex justify-evenly">
-                                <input type="radio" name="grave locations" 
+                                <input type="radio" name="grave locations"
                                 value="Farview Lawn">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                    <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                    <i class="fa-solid fa-microphone text-3xl microphone location_FairviewLawn_audio"></i>
                                 </button>
                             </div>
 
@@ -251,14 +251,14 @@
                     <div class="card border-[2px] border-black flex rounded-lg">
 
                         <div class="card-image">
-                            <img src="../static/images/location_StPeters.jpg" 
+                            <img src="../static/images/location_StPeters.jpg"
                             alt="A landmark of faith, experience the history of St Peter's Cemetery.">
                         </div>
 
                         <div class="card-description flex flex-col">
 
                             <div class="card-text-heading text-center mb-3">
-                                St. Peter's Cemetry
+                                St. Peter's Cemetery
                                 <hr class="border-black border-[3px]">
                             </div>
 
@@ -267,10 +267,10 @@
                             </div>
 
                             <div class="card-select flex justify-evenly">
-                                <input type="radio" name="grave locations" 
+                                <input type="radio" name="grave locations"
                                 value="St. Peter's">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                    <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                    <i class="fa-solid fa-microphone text-3xl microphone location_StPeters_audio"></i>
                                 </button>
                             </div>
 
@@ -281,7 +281,7 @@
                     <div class="card border-[2px] border-black flex rounded-lg">
 
                         <div class="card-image">
-                            <img src="../static/images/location_MtHermon.jpg" 
+                            <img src="../static/images/location_MtHermon.jpg"
                             alt="A towering peak in a breathtaking landscape, consider Mt Hermon.">
                         </div>
 
@@ -297,10 +297,10 @@
                             </div>
 
                             <div class="card-select flex justify-evenly">
-                                <input type="radio" name="grave locations" 
+                                <input type="radio" name="grave locations"
                                 value="Mount Hermon">
                                 <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                    <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                    <i class="fa-solid fa-microphone text-3xl microphone location_MtHermon_audio"></i>
                                 </button>
                             </div>
 
@@ -338,7 +338,7 @@
                         <div class="card-select flex">
                             <input type="radio" name="marker options" value="Wooden Cross">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone mo_woodenmemorialcross_audio"></i>
                             </button>
                         </div>
 
@@ -358,7 +358,7 @@
                         <div class="card-select flex">
                             <input type="radio" name="marker options" value="Stone Marker">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone mo_stonemarker_audio"></i>
                             </button>
                         </div>
 
@@ -378,7 +378,7 @@
                         <div class="card-select flex">
                             <input type="radio" name="marker options" value="Wooden Plaque">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone mo_woodenplaque_audio"></i>
                             </button>
                         </div>
 
@@ -398,7 +398,7 @@
                         <div class="card-select flex">
                             <input type="radio" name="marker options" value="Tree Marker">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                                <i class="fa-solid fa-microphone text-3xl microphone mo_treemarker_audio"></i>
                             </button>
                         </div>
 
@@ -409,7 +409,7 @@
 
             <!--
                 Inscription/Favourite Quote [Aakarshan Khosla]
-                This HTML content contains a field where user can 
+                This HTML content contains a field where user can
                 enter their inscription.
             -->
             <div class="inscription grid grid-cols-1 md:grid-cols-2 gap-5 text-center mb-5">
@@ -423,12 +423,13 @@
                 Submit area
             -->
             <div class="form-submit text-center">
-                <input type="submit" class="bg-white border-2 border-[#000000] 
+                <input type="submit" class="bg-white border-2 border-[#000000]
                     rounded p-1 hover:bg-[#f5f5dc] rounded" type="submit">
                 </input>
             </div>
 
         </form>
+        <script src="../static/css/index.js"></script>
     </div>
 </body>
 </html>
